--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <div class="window-body">
       <div class="sidebar">
-        <img src="C:\Users\Woody\Downloads\Pic\89867e96057930a6aca4cad80ee4c8b6.jpg" alt="pfp" />
+        <img src="https://biaupload.com/do.php?imgf=org-3d32c3666df41.jpg" alt="pfp" />
         <div class="section">
           <div class="section-title">ABOUT ME</div>
           <p><strong>MiCH !</strong><br>
@@ -55,7 +55,7 @@
 
         <div class="card">
           <p><strong>detailed:</strong> i'm a capricorn <strong>sun and rising</strong> with a cancer <strong>moon!</strong></p>
-          <img src="C:\Users\Woody\Downloads\Pic\e18c488334a7b6f6ef5476c85667bbab.jpg" alt="bg" class="card-img" />
+          <img src="https://biaupload.com/do.php?imgf=org-20be02afdb082.jpg" alt="bg" class="card-img" />
         </div>
     </div>
     <div class="main">
